# NativeMessageQueue

app/: build.gradle
app/src/androidTest/java/com/example/bob/nativemessagequeue/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  debug.h  msg_queue.h  mutex.c  mutex.h  native-lib.c
app/src/main/java/com/example/bob/nativemessagequeue/: MainActivity.java
app/src/main/java/com/example/bob/nativemessagequeue/api/: AbstractMQ.java  IPlayer.java  MessageClient.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/bob/nativemessagequeue/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
